# parsetc

./: .gitignore  Makefile  README.md  common.lark  dieghv.lark  env.yml  gdpi.lark  ggn.lark  ggnn.lark  parsetc.py  pyproject.toml  terminals.json  translit.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: index.html  parsetc.html  search.js
docs/parsetc/: Cantonese.html  Teochew.html  parsetc.html
docs/parsetc/Cantonese/: parser.html  translit.html
docs/parsetc/Teochew/: parser.html  translit.html
examples/: README.md  cantonese.cpy.txt  cantonese.jp.txt  dieghv.tones.txt  teochew.dieghv.sep.txt  teochew.duffus.txt  teochew.gdpi.sep.txt  teochew.gdpi.tones.txt
src/parsetc/: __init__.py  common.lark  dieghv.lark  duffus.lark  extends.json  gdpi.lark  ggn.lark  ggnn.lark  parsetc.py  terminals.json  tlo.lark  translit.py
src/parsetc/Cantonese/: __init__.py  extends.json  mergers.json  parser.py  shared.lark  terminals.json  translit.py
src/parsetc/Teochew/: __init__.py  extends.json  parser.py  translit.py
